update to minecraft 1.20.4

--- a/.gitignore
+++ b/.gitignore
@@ -144,3 +144,6 @@ velocity-runner/run/*
 !velocity-runner/run/secret.txt
 !velocity-runner/run/plugins/
 velocity-runner/run/plugins/bStats
+
+# Visual Studio Code workspace file
+.vscode/
