--- a/velocity-plugin/build.gradle
+++ b/velocity-plugin/build.gradle
@@ -10,8 +10,8 @@ repositories {
 }
 
 dependencies {
-    compileOnly 'com.velocitypowered:velocity-api:3.1.2-20221212.043117-95'
-    annotationProcessor 'com.velocitypowered:velocity-api:3.1.2-20221212.043117-95'
+    compileOnly 'com.velocitypowered:velocity-api:3.3.0-SNAPSHOT'
+    annotationProcessor 'com.velocitypowered:velocity-api:3.3.0-SNAPSHOT'
 
     implementation project(':common')
 }
