--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'base'
 }
 
 dependencies {
@@ -17,12 +18,15 @@ tasks.withType(JavaCompile).configureEach {
     }
 }
 
+base {
+    archivesName = "$rootProject.name-common"
+}
+
 java {
     def javaVersion = JavaVersion.toVersion(targetJavaVersion)
     if (JavaVersion.current() < javaVersion) {
         toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
     }
-    archivesBaseName = "$rootProject.name-common"
     // If you remove this line, sources will not be generated.
     withSourcesJar()
 }
